[package]
edition = "2021"
name = "wtapi"
version = "0.0.1"
authors = ["zyb"]

[lib]
crate-type = ["cdylib"]

[dependencies]
easy-http-request = "0.2.13"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi4"] }
napi-derive = "2.2.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11.6", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.8"
hyper-tls = "0.5.0"
async-recursion = "1.0.0"
futures = "0.3.17"
anyhow = "1.0.45"
futures-util = "0.3.17"
zip = "0.5.5"
walkdir = "2"
encoding = "0.2.33"


[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
